@@ -1,3 +1,11 @@
+Sun Mar  6 10:07:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
+        * tao/Stub.h:
+        * tao/Stub.inl:
+        * tao/Stub.cpp:
+          Reworked simplication of the stub
+
 Fri Mar  4 18:04:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/IDL_Test.mpc:
